# controllers/Series.js
@@ -16,42 +16,8 @@ const {
 
 const {
     SeriesResponseDTO,
-    SeriesDetailResponseDTO,
     SeriesFilterResponseDTO,
 } = require('../data/response_dto/series');
-
-const { SeriesInputDTO } = require('../data/dto');
-
-module.exports.postSeries = (req, res, next) => {
-    Series.postSeries(new SeriesInputDTO(req.body))
-        .then((createdResultDTO) => {
-            return createdResultDTO.idx;
-        })
-        .then((response) => {
-            res.status(OK).json(
-                new ResponseDTO({
-                    message: 'series post 성공',
-                    data: response,
-                })
-            );
-        })
-        .catch((err) => next(err));
-};
-
-module.exports.getSeries = (req, res, next) => {
-    const seriesIdx = req.swagger.params['seriesIdx'].value;
-    Series.getSeriesByIdx(seriesIdx)
-        .then((result) => {
-            return new SeriesDetailResponseDTO(result);
-        })
-        .then((response) => {
-            res.status(OK).json({
-                message: 'series 개별 조회 성공',
-                data: response,
-            });
-        })
-        .catch((err) => next(err));
-};
 
 module.exports.getSeriesAll = (req, res, next) => {
     Series.getSeriesAll(new PagingRequestDTO(req.query))
@@ -69,49 +35,6 @@ module.exports.getSeriesAll = (req, res, next) => {
                     message: 'series 전체 조회 성공',
                 })
             );
-        })
-        .catch((err) => next(err));
-};
-
-module.exports.searchSeries = (req, res, next) => {
-    Series.searchSeries(new PagingRequestDTO(req.query))
-        .then((result) => {
-            return {
-                count: result.count,
-                rows: result.rows.map((it) => new SeriesResponseDTO(it)),
-            };
-        })
-        .then(({ count, rows }) => {
-            res.status(OK).json(
-                new ListAndCountResponseDTO({
-                    count,
-                    rows,
-                    message: '계열 검색 성공',
-                })
-            );
-        })
-        .catch((err) => next(err));
-};
-
-module.exports.putSeries = (req, res, next) => {
-    const seriesIdx = req.swagger.params['seriesIdx'].value;
-    const json = Object.assign({}, req.body, { seriesIdx });
-    Series.putSeries(new SeriesInputDTO(json))
-        .then(() => {
-            res.status(OK).json({
-                message: 'series put 성공',
-            });
-        })
-        .catch((err) => next(err));
-};
-
-module.exports.deleteSeries = (req, res, next) => {
-    const seriesIdx = req.swagger.params['seriesIdx'].value;
-    Series.deleteSeries(seriesIdx)
-        .then(() => {
-            res.status(OK).json({
-                message: 'series delete 성공',
-            });
         })
         .catch((err) => next(err));
 };
@@ -148,21 +71,4 @@ module.exports.getFilterSeries = (req, res, next) => {
             );
         })
         .catch((err) => next(err));
-};
-
-module.exports.getSeriesByEnglishName = (req, res, next) => {
-    const { englishName } = req.body;
-    Series.findSeriesByEnglishName(englishName)
-        .then((seriesDTO) => new SeriesDetailResponseDTO(seriesDTO))
-        .then((response) => {
-            res.status(OK).json(
-                new ResponseDTO({
-                    message: '계열 조회 성공',
-                    data: response,
-                })
-            );
-        })
-        .catch((err) => {
-            next(err);
-        });
 };
